--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Milyuner Sukses Sejahtera</strong><span>All Rights Reserved</span></p>
+      <p>© <span>2024</span> <strong class="px-1 sitename">Milyuner Sukses Sejahtera</strong>. <span>All Rights Reserved</span></p>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
