--- a/index.html
+++ b/index.html
@@ -920,8 +920,8 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>2024</span> <strong class="px-1 sitename">Milyuner Sukses Sejahtera</strong>. <span>All Rights Reserved</span></p>
-      <div class="credits">
+      <p>© <span>2024,</span> <strong class="px-1 sitename">Milyuner Sukses Sejahtera.</strong> <span>All Rights Reserved</span></p>
+      <div class="credits d-done d-md-block">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
