--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <img src="assets/img/logo.png" alt="">
+        <!-- img src="assets/img/logo.png" alt=""-->
         <h1 class="sitename">MSS</h1>
       </a>
 
