--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="index.html#about">Get Started</a>
+      <a class="btn-getstarted" href="https://wa.me/6285735725629">Daftar</a>
 
     </div>
   </header>
