--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <p data-aos="fade-up" data-aos-delay="100">Quickly start your project now and set the stage for success<br></p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
             <a href="https://wa.me/6285735725629" class="btn-get-started">Daftar</a>
-            <a href="https://youtu.be/UKszrjSJW_c?si=DPVVuLYgLbm5GNt0" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <a href="https://youtu.be/UKszrjSJW_c?si=DPVVuLYgLbm5GNt0" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Lihat Video</span></a>
           </div>
           <img src="assets/img/hero-services-img.webp" class="img-fluid hero-img" alt="" data-aos="zoom-out" data-aos-delay="300">
         </div>
