--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
 
     <div class="container copyright text-center mt-4">
       <p>© <span>2024</span> <strong class="px-1 sitename">Milyuner Sukses Sejahtera.</strong> <span>All Rights Reserved</span></p>
-      <div class="credits d-done d-md-block">
+      <div class="credits d-done d-lg-block d-md-none">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
