--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
      position: fixed;
      width: 48px;
      height: 48px;
-     bottom: 85px;
-     right: 30px;
+     bottom: 755px;
+     right: 15px;
      background-color: #25d366;
      color: #fff;
      border-radius: 50px;
@@ -946,7 +946,7 @@
   </footer>
   <!-- render the button and direct it to wa.me -->
   <a href="https://wa.me/6285735725629?text=Assalamualaikum..%20Saya menghubungi dari web Milyuner.id%20Mau daftar bisnis milyuner" class="floating" target="_blank">
-  <i class="fab fa-whatsapp fab-icon"></i>
+  <i class="bi bi-whatsap"></i>
   </a>
   
   <!-- Scroll Top -->
