--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
   </footer>
   <!-- render the button and direct it to wa.me -->
   <a href="https://wa.me/6285735725629?text=Assalamualaikum..%20Saya menghubungi dari web Milyuner.id%20Mau daftar bisnis milyuner" class="floating" target="_blank">
-  <i class="bi bi-whatsap"></i>
+  <i class="bi bi-whatsapp"></i>
   </a>
   
   <!-- Scroll Top -->
